--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "element-ui": "^2.12.0"
+        "element-ui": "^2.12.0",
+        "moment": "^2.22.2"
     }
 }
