--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,8 @@
         "classmap": [
             "database/seeds",
             "database/factories"
-        ]
+        ],
+        "files": ["app/Helper/General.php"]
     },
     "autoload-dev": {
         "psr-4": {
