--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "kodeine/laravel-acl": "^1.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
+        "phpoffice/phppresentation": "^0.9.0",
         "ramsey/uuid": "^3.8"
     },
     "require-dev": {
