--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "kodeine/laravel-acl": "^1.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
-        "ramsey/uuid": "^3.8"
+        "ramsey/uuid": "^3.8",
+		"ixudra/curl":"6.*"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
