--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.1.3",
         "doctrine/dbal": "^2.9",
         "dompdf/dompdf": "^0.8.3",
+        "endroid/qr-code": "^3.5",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.4",
         "kodeine/laravel-acl": "^1.0",
