--- a/.env.example
+++ b/.env.example
@@ -42,3 +42,8 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+SMS_PROVIDER=YUN_LIAN
+YUN_LIAN_ACCOUNTS_SID=
+YUN_LIAN_ACCOUNTS_TOKEN=
+YUN_LIAN_APP_ID=
