--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "phpoffice/phpspreadsheet": "^1.9",
-        "ramsey/uuid": "^3.8"
+        "ramsey/uuid": "^3.8",
+        "jpush/jpush": "*"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.1",
