--- a/.env.example
+++ b/.env.example
@@ -47,3 +47,11 @@ SMS_PROVIDER=YUN_LIAN
 YUN_LIAN_ACCOUNTS_SID=
 YUN_LIAN_ACCOUNTS_TOKEN=
 YUN_LIAN_APP_ID=
+
+PUSH_PROVIDER=J_PUSH
+PUSH_STUDENT_KEY=
+PUSH_STUDENT_SECRET=
+PUSH_TEACHER_KEY=
+PUSH_TEACHER_SECRET=
+PUSH_ENTERPRISE_KEY=
+PUSH_ENTERPRISE_SECRET=
