--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "kodeine/laravel-acl": "^1.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
+        "maatwebsite/excel": "^3.1",
         "phpoffice/phpspreadsheet": "^1.9",
         "ramsey/uuid": "^3.8"
     },
