wifi有线和无线请求入参修改

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,8 @@ yarn-error.log
 /.idea/*
 .idea/*
 .idea
+/public/querylog.php
 /public/querylog.txt
 _ide_helper.php
 _ide_helper_models.php
-querylog.txt
+/storage/framework/views
