--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "laravel/tinker": "^1.0",
         "maatwebsite/excel": "^3.1",
         "phpoffice/phpspreadsheet": "^1.9",
+        "predis/predis": "^1.1",
         "ramsey/uuid": "^3.8"
     },
     "require-dev": {
