--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "babel-polyfill": "^6.26.0",
         "element-ui": "^2.12.0",
         "lockr": "^0.8.5",
         "moment": "^2.24.0",
