--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "endroid/qr-code": "^3.7",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.4",
+        "illuminate/support": "^5.1 || ^6.0",
         "ixudra/curl": "6.*",
         "jpush/jpush": "*",
         "kodeine/laravel-acl": "^1.0",
@@ -22,7 +23,9 @@
         "maatwebsite/excel": "^3.1",
         "phpoffice/phpspreadsheet": "^1.9",
         "predis/predis": "^1.1",
-        "ramsey/uuid": "^3.8"
+        "ramsey/uuid": "^3.8",
+        "yansongda/laravel-pay": "^2.1",
+        "yansongda/pay": "^2.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.1",
@@ -41,12 +44,19 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": []
+            "dont-discover": [],
+			"providers": [
+                "Yansongda\\LaravelPay\\PayServiceProvider"
+            ],
+            "aliases": {
+                "Pay": "Yansongda\\LaravelPay\\Facades\\Pay"
+            }
         }
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+			"Yansongda\\LaravelPay\\": "src"
         },
         "classmap": [
             "database/seeds",
