--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -3,6 +3,7 @@
     "/css/h5/user.css": "/css/h5/user.css",
     "/css/app.css": "/css/app.css",
     "/js/h5/student.js": "/js/h5/student.js",
+    "/js/h5/teacher.js": "/js/h5/teacher.js",
     "/css/extra_page.css": "/css/extra_page.css",
     "/js/extra_page.js": "/js/extra_page.js"
 }
