--- a/.gitignore
+++ b/.gitignore
@@ -20,4 +20,4 @@ yarn-error.log
 _ide_helper.php
 _ide_helper_models.php
 querylog.txt
-resources/views/manager_wifi/wifiIssue/list.blade.php
+resources/views/manager_wifi/*
