--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "krlove/eloquent-model-generator": "^1.3",
+        "laravel/telescope": "2.1.7",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
         "phpunit/phpunit": "^7.5"
