--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "moment": "^2.24.0",
         "normalize.css": "^8.0.1",
         "qs": "^6.9.1",
+        "vant": "^2.5.3",
         "vue-draggable": "^2.0.3"
     }
 }
