--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
         "vue": "^2.5.17",
-        "vuex": "^3.1.3",
-        "vue-template-compiler": "^2.6.10"
+        "vue-template-compiler": "^2.6.10",
+        "vuex": "^3.1.3"
     },
     "dependencies": {
         "babel-polyfill": "^6.26.0",
