--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
         "normalize.css": "^8.0.1",
         "qs": "^6.9.1",
         "vant": "^2.5.3",
-        "vue-draggable": "^2.0.3"
+        "vue-draggable": "^2.0.3",
+        "vue-ele-upload-video": "^2.0.5",
+        "vue-quill-editor": "^3.0.6"
     }
 }
