--- a/.env.example
+++ b/.env.example
@@ -55,3 +55,7 @@ PUSH_TEACHER_KEY=
 PUSH_TEACHER_SECRET=
 PUSH_ENTERPRISE_KEY=
 PUSH_ENTERPRISE_SECRET=
+
+CLOUD_APP_ID=
+CLOUD_APP_SECRET=
+CLOUD_APP_API=
