--- a/package.json
+++ b/package.json
@@ -1,41 +1,42 @@
 {
-    "private": true,
-    "scripts": {
-        "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
-    },
-    "devDependencies": {
-        "axios": "^0.19",
-        "babel-plugin-component": "^1.1.1",
-        "bootstrap": "^4.1.0",
-        "cross-env": "^5.1",
-        "jquery": "^3.2",
-        "laravel-mix": "^4.0.7",
-        "lodash": "^4.17.13",
-        "popper.js": "^1.12",
-        "resolve-url-loader": "^2.3.1",
-        "sass": "^1.15.2",
-        "sass-loader": "^7.1.0",
-        "vue": "^2.5.17",
-        "vue-template-compiler": "^2.6.10",
-        "vuex": "^3.1.3"
-    },
-    "dependencies": {
-        "babel-polyfill": "^6.26.0",
-        "element-ui": "^2.12.0",
-        "lockr": "^0.8.5",
-        "moment": "^2.24.0",
-        "normalize.css": "^8.0.1",
-        "qs": "^6.9.1",
-        "vant": "^2.5.3",
-        "vue-calendar-component": "^2.8.2",
-        "vue-draggable": "^2.0.3",
-        "vue-ele-upload-video": "^2.0.5",
-        "vue-quill-editor": "^3.0.6"
-    }
+  "private": true,
+  "scripts": {
+    "dev": "npm run development",
+    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch": "npm run development -- --watch",
+    "watch-poll": "npm run watch -- --watch-poll",
+    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "prod": "npm run production",
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+  },
+  "devDependencies": {
+    "axios": "^0.19",
+    "babel-plugin-component": "^1.1.1",
+    "bootstrap": "^4.1.0",
+    "cross-env": "^5.1",
+    "jquery": "^3.2",
+    "laravel-mix": "^4.0.7",
+    "lodash": "^4.17.13",
+    "popper.js": "^1.12",
+    "resolve-url-loader": "^2.3.1",
+    "sass": "^1.15.2",
+    "sass-loader": "^7.1.0",
+    "vue": "^2.5.17",
+    "vue-template-compiler": "^2.6.10",
+    "vuex": "^3.1.3"
+  },
+  "dependencies": {
+    "babel-polyfill": "^6.26.0",
+    "element-ui": "^2.12.0",
+    "lockr": "^0.8.5",
+    "moment": "^2.24.0",
+    "normalize.css": "^8.0.1",
+    "qs": "^6.9.1",
+    "vant": "^2.5.3",
+    "vue-calendar-component": "^2.8.2",
+    "vue-draggable": "^2.0.3",
+    "vue-ele-upload-video": "^2.0.5",
+    "vue-hover-mask": "^1.0.0",
+    "vue-quill-editor": "^3.0.6"
+  }
 }
